Made footer according to the model, fixed up some styling issues and added react icons. Proceeding to fix styling and refactor code so it's more readable

--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -82,9 +82,9 @@
 }
 
 .blog-circle {
+  background-color: black;
   border-radius: 50%;
   width: 4px;
   height: 4px;
-  background-color: rgba(0, 0, 0, 0.5);
   margin-right: 3px;
 }
